--- a/project.ipynb
+++ b/project.ipynb
@@ -390,8 +390,7 @@
    "id": "08c969ed",
    "metadata": {},
    "source": [
-    "# IQR\n",
-    "안됨(극단값 없음)"
+    "# IQR"
    ]
   },
   {
@@ -839,6 +838,14 @@
     "    color='red'\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4e13ca1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
