--- a/add_fetures.ipynb
+++ b/add_fetures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "id": "4ed1705c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "id": "b594b167",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "4   1914"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,13 +93,13 @@
    "id": "08f1b6b6",
    "metadata": {},
    "source": [
-    "# Z-score\n",
+    "# Z-score and IQR\n",
     "noise average - real time noise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "id": "f5caa231",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "<Axes: xlabel='None', ylabel='noise'>"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "id": "5d3c6a60",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "<Axes: xlabel='None', ylabel='noise'>"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
